test_suite5/ALAN/test_suite/alan-2022-examples/failing/002630_mutation.alan
source m7 begin D := begin end
